--- a/src/app/generic/section-start/section-start.component.html
+++ b/src/app/generic/section-start/section-start.component.html
@@ -2,7 +2,7 @@
     <div class="card card_largest_with_image grid-item">
         <img *ngIf="section.imagen != ''" class="card-img-top" src="{{config.serverNodeLocation}}images/imageForText/{{section.imagen}}">
         <div class="card-body">
-            <div class="card-title" style="text-align: center;"><span style="color: #8fd0a6">
+            <div class="card-title" style="text-align: center;"><span style="color: #6ab183">
                     <h3 [innerHTML]="section.nombre"></h3>
                 </span></div>
 
