--- a/src/app/search/search/search.component.css
+++ b/src/app/search/search/search.component.css
@@ -36,7 +36,11 @@
 
 .sidebar__item ul li input {
     margin-right: 5px;
-    color: red;
+    color: #ffda43;
+}
+
+.card-text span {
+    color: #ffda43 !important;
 }
 
 .filter__found {
