--- a/src/app/generic/category/category.component.html
+++ b/src/app/generic/category/category.component.html
@@ -1,7 +1,10 @@
 <section class="categories">
     <div class="container">
 
-        <div >
+        <div *ngIf="innerWidth > 500">
+            <div class="title" style="text-align: center; color: #6ab183; margin-bottom: 20px;">
+                <h3>Temáticas</h3>
+            </div>
             <div *ngIf="category === 'collection'; then collection"></div>
             <div *ngIf="category === 'vpost'; then vpost"></div>
             <div *ngIf="category === 'store'; then store"></div>
@@ -9,7 +12,7 @@
             <div *ngIf="category === 'tales' ; then otherSection"></div>
         </div>
 
-        <owl-carousel *ngIf="active" [options]="carouselOptions" [items]="categoryList" [carouselClasses]="['owl-theme', 'row', 'sliding']">
+        <owl-carousel *ngIf="innerWidth < 500" [options]="carouselOptions" [items]="categoryList" [carouselClasses]="['owl-theme', 'row', 'sliding']">
             <div *ngIf="category === 'collection'; then collection"></div>
             <div *ngIf="category === 'vpost'; then vpost"></div>
             <div *ngIf="category === 'store'; then store"></div>
@@ -70,6 +73,19 @@
         <ng-template #store>
             <div class="colum-list" *ngFor="let item of categoryList">
                 <div class="card" style="width: 18rem;">
+                    <a [routerLink]="['/gallery',item.idTematica,sonLevel,category, item.nombre]">
+                        <img src="{{config.serverNodeLocation}}images/imageForCategory/{{item.imagenMenu}}/{{category}}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title" >
+                                <p [innerHTML]="item.nombre"></p>
+                            </h5>
+                        </div>
+                    </a>
+                    
+                </div>
+            </div>
+            <!-- <div class="colum-list" *ngFor="let item of categoryList">
+                <div class="card" style="width: 18rem;">
                     <img src="{{config.serverNodeLocation}}images/imageForCategory/{{item.imagenMenu}}/{{category}}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title" [routerLink]="['/gallery',item.idTematica,sonLevel,category, item.nombre]">
@@ -77,7 +93,7 @@
                         </h5>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </ng-template>
     </div>
 
