--- a/src/app/generic/text/text.component.html
+++ b/src/app/generic/text/text.component.html
@@ -3,7 +3,7 @@
         <img *ngIf="baseFolder" class="card-img-top" src="{{configService.serverNodeLocation}}images/{{level}}/{{section.carpeta}}/{{section.imagen}}/{{category}}/{{baseFolder}}">
         <img *ngIf="!baseFolder" class="card-img-top" src="{{configService.serverNodeLocation}}images/{{level}}/{{section.nombre}}/{{section.imagen}}/{{category}}/none">
         <div class="card-body">
-            <div class="card-title"><span style="color: #8fd0a6"><h3 [innerHTML]="section.titulo"></h3></span></div>
+            <div class="card-title"><span style="color: #6ab183"><h3 [innerHTML]="section.titulo"></h3></span></div>
 
 
             <div class="card-nav">
