30-06-2020-Fix bug menu.store

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -104,7 +104,7 @@
                 <li (click)="categoryType.next('samples')" class="menu_mm"><a [routerLink]="['/samples', '3']">{{'Menu.Muestras'|translate}}</a></li>
                 <li (click)="categoryType.next('vpost')" class="menu_mm"><a [routerLink]="['/vpost', '6']">{{'Menu.Postales'|translate}}</a>
                 </li>
-                <li (click)="categoryType.next('store')" class="menu_mm"><a [routerLink]="['/store', '7']">{{'Menu.Store'|translate}}</a>
+                <li (click)="categoryType.next('store')" class="menu_mm"><a [routerLink]="['/store', '7']">{{'Menu.Tienda'|translate}}</a>
                 </li>
 
             </ul>
