30-06-2020-Add thematics in ie8n

--- a/src/app/generic/category/category.component.html
+++ b/src/app/generic/category/category.component.html
@@ -3,7 +3,7 @@
 
         <div *ngIf="innerWidth > 500">
             <div class="title" style="text-align: center; color: #6ab183; margin-bottom: 20px;">
-                <h3>Temáticas</h3>
+                <h3>{{'Category.Tematica'|translate}}</h3>
             </div>
             <div *ngIf="category === 'collection'; then collection"></div>
             <div *ngIf="category === 'vpost'; then vpost"></div>
